# doc-scan-intelligent-operator

./: .coveragerc  .gitignore  .snyk  CLAUDE.md  Makefile  README.md  config.example.yaml  pyproject.toml  pytest.ini  renovate.json  requirements-dev.txt  requirements.txt  setup.py  sonar-project.properties
.github/: CODEOWNERS  PR_BODY.md  PULL_REQUEST_TEMPLATE.md  RENOVATE_SETUP.md  dependabot.yml  renovate.json5
.github/workflows/: dependency-test.yml  snyk.yml  sonarcloud.yml
docscan/: __init__.py  auth.py  classifier.py  cli.py  cli_old.py  config.py  file_renamer.py  invoice_detector.py  mlx_utils.py  model_manager.py  organizer.py  path_utils.py  pdf_utils.py  scanner.py
tests/: __init__.py  test_auth.py  test_classifier.py  test_cli.py  test_config.py  test_file_renamer.py  test_invoice_detector.py  test_mlx_utils.py  test_model_manager.py  test_organizer.py  test_path_utils.py  test_pdf_utils.py  test_scanner.py
